@@ -24,9 +24,9 @@
             "rct2.scenery_small.tghc2",
             "$DAT:00000002|GWTRHT  ",
             "rct2.scenery_small.tcj",
-            "$DAT:09F55801|MG-RCT19",
+            "fidwell.scenery_small.tcj",
             "rct2.scenery_small.tmbj",
-            "$DAT:00000002|GWTRMBJ ",
+            "fidwell.scenery_small.tmbj",
             "rct2.scenery_small.tcf",
             "$DAT:00000002|GWTRCF  ",
             "rct2.scenery_small.tcl",
