@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tcj",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "09F55801|MG-RCT19|F2017E79",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 10,
+        "removalPrice": 5,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 64,
+        "isTree": true,
+        "shape": "1/4",
+        "SMALL_SCENERY_FLAG_VOFFSET_CENTRE": true,
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -13, "y": -65 },
+      { "path": "images/1.png", "x": -12, "y": -67 },
+      { "path": "images/2.png", "x": -13, "y": -65 },
+      { "path": "images/3.png", "x": -13, "y": -62 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Common Juniper Tree",
+            "fr-FR": "Genévrier",
+            "de-DE": "Wacholderbaum",
+            "es-ES": "Enebro común",
+            "it-IT": "Ginepro comune",
+            "nl-NL": "Gewone jeneverbes",
+            "sv-SE": "Vanlig en",
+            "ko-KR": "노간주나무",
+            "zh-CN": "一般桧树",
+            "zh-TW": "一般檜樹",
+            "pt-BR": "Árvore Zimbro Comum",
+            "cs-CZ": "Jalovec",
+            "ja-JP": "普通のネズの木",
+            "pl-PL": "Jałowiec",
+            "ru-RU": "Можжевельник",
+            "eo-ZZ": "Ordinara Juniperoarbo",
+            "ca-ES": "Ginebre",
+            "fi-FI": "Kataja"
+        }
+    }
+}
