@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tmbj",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRMBJ |E303A91C",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 8,
+        "removalPrice": 5,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 56,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -22, "y": -55 },
+      { "path": "images/1.png", "x": -22, "y": -54 },
+      { "path": "images/2.png", "x": -22, "y": -58 },
+      { "path": "images/3.png", "x": -21, "y": -48 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Meyer’s Blue Juniper Tree",
+            "fr-FR": "Genévrier bleu de Meyer",
+            "de-DE": "Meyers blauer Wacholderbaum",
+            "es-ES": "Enebro azul de Meyer",
+            "it-IT": "Ginepro blu di Meyer",
+            "nl-NL": "Blauwe jeneverbes",
+            "sv-SE": "Meyers blåa en",
+            "ko-KR": "메이어 향나무",
+            "zh-CN": "梅格蓝桧树",
+            "zh-TW": "梅格藍檜樹",
+            "pt-BR": "Árvore Zimbro-Azul-de-Meyer",
+            "cs-CZ": "Modrý jalovec",
+            "ja-JP": "マイヤーの青ネズの木",
+            "pl-PL": "Błękitny jałowiec",
+            "ru-RU": "Голубой можжевельник",
+            "eo-ZZ": "Blua Juniperoarbo de Meyer",
+            "ca-ES": "Ginebre blau de Meyer",
+            "fi-FI": "Himalajankataja",
+            "tr-TR": "Meyer’s Blue Juniper Tree"
+        }
+    }
+}
